Add some keywords for SEO

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row py-lg-5">
     <div class="col-lg-6 col-md-8 mx-auto">
       <h1 class="fw-light">Teensy Bit</h1>
-      <p class="lead text-muted">Saving in home daycare owners time, money & frustration with a simple set of life-saving features at a teensy price. Coming soon.</p>
+      <p class="lead text-muted">An in home daycare app, saving providers time, money & frustration with a simple set of life-saving features at a teensy price. Coming soon.</p>
       <p>
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-get_started">
           Get Started
@@ -27,14 +27,14 @@
     <div class="col-lg-4">
       <i class="fas fa-money-bill-wave fa-10x text-success"></i>
       <h2>Auto Payments</h2>
-      <p>No more late payments, manually sending invoices or spending hours a month on dealing with money, now you can have that time back for yourself.</p>
+      <p>No more late daycare payments, manually sending invoices or spending hours a month on dealing with money, now you can have that time back for yourself.</p>
       <p><a class="btn btn-secondary" href="#payments" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <i class="fas fa-file-alt fa-10x text-warning"></i>
 
       <h2>Online Paperwork</h2>
-      <p>Need some paper work signed and returned? No more printing, or holding up parents at the door. They can complete and return online.</p>
+      <p>Need some daycare paper work signed and returned? No more printing, or holding up parents at the door. They can complete and return online.</p>
       <p><a class="btn btn-secondary" href="#paperwork" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
@@ -53,7 +53,7 @@
     <div class="row featurette" id="payments">
       <div class="col-md-7">
         <h2 class="featurette-heading">Auto Payments & Invoicing. <span class="text-muted">Keep your bank account full.</span></h2>
-        <p class="lead">Never have a missed or late payment again. You will be able to set all your parents up on an automatic payment schedule that will save you time and ensure you get your hard earned dollars into your account. If auto payments aren't for you, then we will send invoices for you, and reminders via many communication channels to ensure you get your payments.</p>
+        <p class="lead">Never have a missed or late payment again. You will be able to set all your parents up on an automatic daycare payment schedule that will save you time and ensure you get your hard earned dollars into your account. If auto payments aren't for you, then we will send invoices for you, and reminders via many communication channels to ensure you get your payments.</p>
         <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
           Get Started
         </button>
@@ -98,7 +98,7 @@
     <div class="row featurette" id="messaging">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Messaging. <span class="text-muted">Broadcast, instant message and text.</span></h2>
-        <p class="lead">Often you need to message all your parents, or a select group of them. This makes it easy to message them via email, text or in-app messages. Set up automatic messages to remind parents to bring supplies or simply let them know how their kid is doing. All in one place. Easy.</p>
+        <p class="lead">Often you need to message all your parents in your daycare, or a select group of them. This makes it easy to message them via email, text or in-app messages. Set up automatic messages to remind parents to bring supplies or simply let them know how their kid is doing. All in one place. Easy.</p>
         <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
           Get Started
         </button>
