Assets pre-compiled Home page improved a bit more.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -44,11 +44,11 @@ body {
   /* MARKETING CONTENT
   -------------------------------------------------- */
   .light-grey-transparent {
-    background-color: rgba(155,155,155,0.5);
+    background-color: rgba(125, 209, 255, 0.95);
   }
 
   #home-top-cover {
-    background-image: image-url("crayons-blured-background.jpeg");
+    background-image: image-url("daycare-kids-blocks.jpg");
     background-size: cover;
     background-position: 0% 40%;
   }
