--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,6 +1,6 @@
 // Bootstrap Overides
 $primary: #7DD1FF;
-$danger: #FF737C;
+$danger: #e2666e;
 $success: #15D6B6;
 $info: #6698E8;
 $warning: #eee845;
