--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 <section class="cover-container d-flex w-100 h-100 py-5 text-center mx-auto flex-column mb-5" id="home-top-cover">
   <div class="row py-lg-5">
-    <div class="col-lg-6 col-md-8 mx-auto light-grey-transparent py-3 rounded">
+    <div class="col-lg-6 col-md-8 mx-auto light-grey-transparent px-3 py-5 rounded">
       <h1 class="fw-light text-white">Teensy Bit</h1>
-      <p class="lead text-light">An in home daycare app, saving providers time, money & frustration with a simple set of life-saving features at a teensy price. Coming soon.</p>
+      <p class="lead text-light">Replaces your hodge-podge of online tools to run your at home daycare.</p>
       <p>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-get_started">
+        <button type="button" class="btn btn-danger text-light" data-bs-toggle="modal" data-bs-target="#email-sign-up-get_started">
           Get Started
         </button>
         <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#email-sign-up-email_signup">
