Adds 'jpg' to img urls

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -59,7 +59,7 @@
         </button>
       </div>
       <div class="col-md-5 xl-font d-inline-flex align-items-center justify-content-center">
-        <%= image_tag("paying-online", class: "img-fluid featurette-image mx-auto" ) %>
+        <%= image_tag("paying-online.jpg", class: "img-fluid featurette-image mx-auto" ) %>
       </div>
     </div>
 
@@ -74,7 +74,7 @@
         </button>
       </div>
       <div class="col-md-5 xl-font d-inline-flex align-items-center justify-content-center order-md-1">
-        <%= image_tag("online-paper-work", class: "img-fluid featurette-image mx-auto" ) %>
+        <%= image_tag("online-paper-work.jpg", class: "img-fluid featurette-image mx-auto" ) %>
       </div>
     </div>
 
@@ -89,7 +89,7 @@
         </button>
       </div>
       <div class="col-md-5 xl-font d-inline-flex align-items-center justify-content-center">
-        <%= image_tag("kid-taking-photo", class: "img-fluid featurette-image mx-auto" ) %>
+        <%= image_tag("kid-taking-photo.jpg", class: "img-fluid featurette-image mx-auto" ) %>
       </div>
     </div>
 
@@ -104,7 +104,7 @@
         </button>
       </div>
       <div class="col-md-5 xl-font d-inline-flex align-items-center justify-content-center order-md-1">
-        <%= image_tag("messaging", class: "img-fluid featurette-image mx-auto" ) %>
+        <%= image_tag("messaging.jpg", class: "img-fluid featurette-image mx-auto" ) %>
       </div>
     </div>
 
