Update landing page Free Two Weeks

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,16 +3,15 @@
     <h1 class="fw-light text-white">Teensy Bit</h1>
     <p class="lead text-light">Replaces your hodge-podge of online tools to run your at home daycare.</p>
     <p>
-      <button type="button" class="btn btn-danger text-light" data-bs-toggle="modal" data-bs-target="#email-sign-up-get_started">
+      <a href="#features" type="button" class="btn btn-danger text-light">
         Get Started
-      </button>
-      <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#email-sign-up-email_signup">
-        Sign Up For Emails
+      </a>
+      <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#email-sign-up-email_signup">
+        Sign Up For Emails & Get Two Weeks Free!
       </button>
     </p>
   </div>
 </section>
-
 
 <!-- Marketing messaging and featurettes
 ================================================== -->
@@ -53,7 +52,7 @@
         <h2 class="featurette-heading">Auto Payments & Invoicing. <span class="text-muted">Keep your bank account full.</span></h2>
         <p class="lead">Never have a missed or late payment again. You will be able to set all your parents up on an automatic daycare payment schedule that will save you time and ensure you get your hard earned dollars into your account. If auto payments aren't for you, then we will send invoices for you, and reminders via many communication channels to ensure you get your payments.</p>
         <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
-          Get Started
+          Get Auto-Payments
         </button>
       </div>
       <div class="col-md-5 xl-font d-inline-flex align-items-center justify-content-center">
@@ -68,7 +67,7 @@
         <h2 class="featurette-heading">Online Paperwork. <span class="text-muted">Save yourself headaches.</span></h2>
         <p class="lead">There are so many forms that parents need to read, sign, and for you to keep up on. Create these in the app so it will keep up on them automatically for you, and make them available wherever the internet is!</p>
         <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
-          Get Started
+          Get Online Paperwork
         </button>
       </div>
       <div class="col-md-5 xl-font d-inline-flex align-items-center justify-content-center order-md-1">
@@ -83,7 +82,7 @@
         <h2 class="featurette-heading">Photo & file sharing. <span class="text-muted">Easy for you, and parents love it!</span></h2>
         <p class="lead">Take a photo, tag the kids in it, done. Its now automatically shared and available to the parents it may concern. Do this with any document or text you may need to share with parents. Easy, simple and saves you time and makes parents happy!</p>
         <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
-          Get Started
+          Get Photo & File Sharing
         </button>
       </div>
       <div class="col-md-5 xl-font d-inline-flex align-items-center justify-content-center">
@@ -98,7 +97,7 @@
         <h2 class="featurette-heading">Messaging. <span class="text-muted">Broadcast, instant message and text.</span></h2>
         <p class="lead">Often you need to message all your parents in your daycare, or a select group of them. This makes it easy to message them via email, text or in-app messages. Set up automatic messages to remind parents to bring supplies or simply let them know how their kid is doing. All in one place. Easy.</p>
         <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
-          Get Started
+          Get Messaging
         </button>
       </div>
       <div class="col-md-5 xl-font d-inline-flex align-items-center justify-content-center order-md-1">
