--- a/app/views/contacts/_email_opt_in_modal.html.erb
+++ b/app/views/contacts/_email_opt_in_modal.html.erb
@@ -3,13 +3,19 @@
     <%= simple_form_for Contact.new, local: true do |f| %>
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="<%= modal_name %>Label">Sign Up For Emails</h5>
+          <h5 class="modal-title" id="<%= modal_name %>Label">Sign Up For Emails & Get Two Weeks Free!</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           <div class="card">
             <div class="card-body">
-              <p>Our app isn't quite ready, yet! We want you to be the first to know when it is! Please fill out this form to receive emails from use with the lastest news for Teensy Bit.</p>
+              <h2 class="featurette-heading mt-1">Get all these amazing features for one low price!</h2>
+              <h3 class="text-muted">Sign up for your first two weeks free!</h3>
+              <p>
+                Our app isn't quite ready, yet. We want you to be the first to know when it is! 
+                Please fill out this form to receive emails from use with the lastest news for 
+                Teensy Bit and when you will be able to start your free two weeks!
+              </p>
               <%= f.error_notification %>
               <%= invisible_captcha %>
               <%= f.input :name %>
