--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,7 @@
     <%= f.error_notification %>
 
     <div class="form-inputs">
+      <%= f.input :kind, as: :hidden, input_html: { value: "provider" } %>
       <%= f.input :email,
                   required: true,
                   autofocus: true,
