--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -4,21 +4,39 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <div class="collapse navbar-collapse me-auto" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <%= link_to "Home", :root, class: "nav-link"%>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#features">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#pricing">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#contact">Contact</a>
-        </li>
-      </ul>
+        <% if current_user.blank? %>
+          <li class="nav-item">
+            <%= link_to "Home", :root, class: "nav-link"%>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/#features">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/#pricing">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/#contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign In", %i[new user session], class: "nav-link" %>
+          </li> 
+          <li class="nav-item">
+            <%= link_to "Register", %i[new user registration], class: "nav-link" %>
+          </li> 
+        <% elsif current_user.present? %>
+          <li class="nav-item">
+            <%= link_to "Dashboard", %i[dashboard daycares], class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign Out", %i[destroy user session], method: :delete, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Edit Profile", %i[edit user registration], class: "nav-link" %>
+          </li> 
+        <% end %>
+      </div>
     </div>
   </div>
 </nav>
