--- a/app/views/daycares/_provider.html.erb
+++ b/app/views/daycares/_provider.html.erb
@@ -1,4 +1,9 @@
-<% if @daycare.present? %>
+<% if !current_user.has_active_subscription? %>
+  <div class="container dashboard" id="daycare">
+    <h1>Please confirm your plan:</h1>
+    <%= render partial: "shared/subscription_cards" %>
+  </div>
+<% elsif @daycare.present? %>
   <div class="container dashboard" id="daycare">
     <div class="row mb-4">
       <div class="col-12 bg-primary rounded text-center my-3 text-light">
@@ -13,7 +18,6 @@
                 <%= image_tag("kid-taking-photo", class: "card-img-top" ) %>
                 <div class="card-body">
                   <h5 class="card-title"><%= child.name %></h5>
-
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item list-group-item-primary">Parents</li>
                     <% child.users.each do |guardian| %>
@@ -26,7 +30,9 @@
             </div>
           <% end %>
         </div>
-        <button class="btn btn-lg btn-danger text-light">Add Child</button>
+        <% if @daycare.users.present?%>
+          <%= link_to "Add Child", %i[new child], class: "btn btn-secondary btn-lg text-light" %>
+        <% end %>
         <%= link_to 'Invite Parent/Guardian', %i[new user invitation], class: 'btn btn-lg btn-danger text-light' %>
       </div>
       <div class="col-md-6" id="payments">
@@ -46,7 +52,6 @@
       </div>
     </div>
   </div>
-
 <% else %>
   <div class="d-flex h-100 text-center text-white bg-primary cover-theme">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
