--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -23,7 +23,7 @@
             <%= link_to "Sign In", %i[new user session], class: "nav-link" %>
           </li> 
           <li class="nav-item">
-            <%= link_to "Register", %i[new user registration], class: "nav-link" %>
+            <%= link_to "Start Free Trial", root_path(anchor: "pricing"), class: "nav-link" %>
           </li> 
         <% elsif current_user.present? %>
           <li class="nav-item">
