Providers can set up autopay for their parents

--- a/app/views/children/_form.html.erb
+++ b/app/views/children/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Add Child</h1>
-  <%= simple_form_for @child do |f| %>
+  <%= simple_form_for([@daycare, @child]) do |f| %>
     <%= f.input :name, label: "Childs Name" %>
     <%= f.association :users, collection: current_user.owned_daycare.users, prompt: "Choose Parents/Guardians" if current_user.provider? %>
     <%= f.submit "Save", class: "btn btn-primary" %>
