--- a/app/views/stripe_mailer/successful_invoice_payment.text.erb
+++ b/app/views/stripe_mailer/successful_invoice_payment.text.erb
@@ -1,4 +1,4 @@
-Your Teensy Bit invoice was successfully paid!
+<%= @stripe_customer.user.name %>, your Teensy Bit invoice was successfully paid!
 
 Amount: <%= @stripe_invoice.total %>
 
