--- a/app/views/stripe_mailer/successful_subscription_created.html.erb
+++ b/app/views/stripe_mailer/successful_subscription_created.html.erb
@@ -5,7 +5,7 @@
   Now you just need to go start inviting parents, guardians and adding children.
   Oh yeah, and you can set up autopayments for them so you can breathe easy when it comes to receiving your payments.
 </p>
-<% if @subscription.trialing? %>
+<% if @stripe_subscription.trialing? %>
   <p>
     You are currently on in your trial period, which ends <%= @subscription.trial_end.strftime("%d-%m-%Y") %>. Afterwhich, you will be charged for your pay period.
   </p>
