--- a/app/views/daycares/_guardian.html.haml
+++ b/app/views/daycares/_guardian.html.haml
@@ -27,7 +27,7 @@
                 = number_to_currency(price.amount)
                 every #{price.recurring["interval_count"] if price.recurring["interval_count"].to_i > 1} #{price.recurring["interval"].pluralize(price.recurring["interval_count"].to_i)}
               - unless subscribed
-                = button_to "Set Up Autopay", { controller: :stripe_sessions, action: "subscription_checkout", params: { price_id: price.stripe_id } }, { class: "btn btn-primary" }
+                = button_to "Set Up Autopay", { controller: :stripe_sessions, action: "subscription_checkout", params: { price_id: price.stripe_id } }, { class: "btn btn-primary", data: { turbo: false }, data: { turbo: false }   }
               - else
                 = button_to "Edit Payment Methods", %i[customer_portal stripe_sessions], { class: "btn btn-outline-secondary" }
   .row
