--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -4,10 +4,10 @@
   = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
     = f.error_notification
     .form-inputs
-      = f.input :email,                       |
-        required: true,                       |
-        autofocus: true,                      |
-        input_html: { autocomplete: "email" } |
+      = f.input :email,
+        required: true,
+        autofocus: true,
+        input_html: { autocomplete: "email" }
       = f.input :name, required: true
       = f.input :address
       = f.input :address_two
@@ -18,20 +18,20 @@
       - if devise_mapping.confirmable? && resource.pending_reconfirmation?
         %p
           Currently waiting confirmation for: #{resource.unconfirmed_email}
-      = f.input :password,                                     |
-        hint: "leave it blank if you don't want to change it", |
-        required: false,                                       |
-        input_html: { autocomplete: "new-password" }           |
-      = f.input :password_confirmation,              |
-        required: false,                             |
-        input_html: { autocomplete: "new-password" } |
-      = f.input :current_password,                                     |
-        hint: "we need your current password to confirm your changes", |
-        required: true,                                                |
-        input_html: { autocomplete: "current-password" }               |
+      = f.input :password,
+        hint: "leave it blank if you don't want to change it",
+        required: false,
+        input_html: { autocomplete: "new-password" }
+      = f.input :password_confirmation,
+        required: false,
+        input_html: { autocomplete: "new-password" }
+      = f.input :current_password,
+        hint: "we need your current password to confirm your changes",
+        required: true,
+        input_html: { autocomplete: "current-password" }
     .form-actions
       = f.button :submit, "Update", class: "btn-primary"
-  = button_to "Manage Subscriptions", %i[customer_portal stripe_sessions], { class: "btn btn-secondary my-4" }
+  = button_to "Manage Subscriptions", %i[customer_portal stripe_sessions], { class: "btn btn-secondary my-4", data: { turbo: false }  }
   %h3 Cancel my account
   %p
     Unhappy? #{link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
